--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
     <footer id="footer">
       <ul class="icons">
         <li><a href="https://www.facebook.com/gaiusandhartsolutions" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-        <li><a href="https://twitter.com/GaiusCoffee" class="icon fa-twitter"><span class="label">Instagram</span></a></li>
+        <li><a href="https://twitter.com/GaiusCoffee" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
         <li><a href="https://github.com/gaiusandhartsolutions" class="icon fa-github"><span class="label">GitHub</span></a></li>
         <li><a href="mailto:gaius.coffee@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
       </ul>
